# psc

./: .gitignore  CMakeLists.txt  readme.md
data/: seq
lib/: ThreadPool.h
src/: CMakeLists.txt  FitAlg.cpp  FitAlg.hpp  FitAlgFactory.hpp  SegAlg.cpp  dpSeg.cpp  main-batch.cpp  topDownSeg.hpp
